--- a/contato.html
+++ b/contato.html
@@ -1,36 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <link rel="stylesheet" href="assets/css/pages/contato/contato.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contato - Plano de Saúde Vida+</title>
+
+    <!-- CSS DA PÁGINA -->
+    <link rel="stylesheet" href="/assets/css/pages/contato/contato.css" />
+
+    <!-- FAVICON -->
+    <link
+      rel="shortcut icon"
+      href="/assets/images/logos/Icon.png"
+      type="image/x-icon"
+    />
+
+    <!-- BOOTSTRAP ICONS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+
+    <title>Contato | Yavita</title>
   </head>
 
   <body>
+    <!-- ================= HEADER ================= -->
     <header>
       <nav class="menu-desktop">
-        <img src="assets/images/logos/YavitaLogo.png" alt="Logotipo Yavita" />
+        <img
+          src="/assets/images/logos/YavitaLogo.png"
+          alt="Logotipo Yavita"
+        />
+
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="sobre.html">Sobre Nós</a></li>
-          <li><a href="#planos">Plano de Saude</a></li>
-          <li><a href="#">Simule seu plano</a></li>
-          <li><a href="#depoimentos">Depoimento</a></li>
-          <li><a href="contato.html">Contato</a></li>
-          <div class="icon-container">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/sobre.html">Sobre Nós</a></li>
+          <li><a href="/index.html#planos">Plano de Saúde</a></li>
+          <li><a href="/simule-plano.html">Simule seu plano</a></li>
+          <li><a href="/index.html#depoimentos">Depoimentos</a></li>
+          <li><a href="/contato.html">Contato</a></li>
+
+          <li class="icon-container">
             <i
               class="bi bi-person-circle custom-icon"
               onclick="toggleLoginLink()"
             ></i>
+
             <div id="loginLink" class="login-link">
-              <a href="login.html">Sou cliente</a>
-              <a href="login.html#cadastroForm">Cadastrar</a>
+              <a href="/login.html">Sou cliente</a>
+              <a href="/login.html#cadastroForm">Cadastrar</a>
             </div>
-          </div>
+          </li>
         </ul>
       </nav>
 
+      <!-- MENU MOBILE -->
       <button class="hamburger" id="hamburger" aria-label="Abrir menu">
         <i class="bi bi-list"></i>
       </button>
@@ -39,27 +63,31 @@
         <button class="close-menu" id="closeMenu" aria-label="Fechar menu">
           <i class="bi bi-x"></i>
         </button>
+
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="sobre.html">Sobre Nós</a></li>
-          <li><a href="#planos">Plano de Saude</a></li>
-          <li><a href="#">Simule seu plano</a></li>
-          <li><a href="#depoimentos">Depoimento</a></li>
-          <li><a href="contato.html">Contato</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/sobre.html">Sobre Nós</a></li>
+          <li><a href="/index.html#planos">Plano de Saúde</a></li>
+          <li><a href="/simule-plano.html">Simule seu plano</a></li>
+          <li><a href="/index.html#depoimentos">Depoimentos</a></li>
+          <li><a href="/contato.html">Contato</a></li>
         </ul>
       </nav>
     </header>
+
+    <!-- ================= MAIN ================= -->
     <main>
-      <div class="container">
+      <section class="container">
         <h2>Fale Conosco</h2>
+
         <form action="enviar_contato.php" method="POST">
-          <label for="nome">Nome completo:</label>
+          <label for="nome">Nome completo</label>
           <input type="text" id="nome" name="nome" required />
 
-          <label for="email">E-mail:</label>
+          <label for="email">E-mail</label>
           <input type="email" id="email" name="email" required />
 
-          <label for="telefone">Telefone:</label>
+          <label for="telefone">Telefone</label>
           <input
             type="tel"
             id="telefone"
@@ -68,7 +96,7 @@
             required
           />
 
-          <label for="assunto">Assunto:</label>
+          <label for="assunto">Assunto</label>
           <select id="assunto" name="assunto" required>
             <option value="">Selecione</option>
             <option value="duvida">Dúvida</option>
@@ -77,7 +105,7 @@
             <option value="outros">Outros</option>
           </select>
 
-          <label for="mensagem">Mensagem:</label>
+          <label for="mensagem">Mensagem</label>
           <textarea
             id="mensagem"
             name="mensagem"
@@ -87,11 +115,14 @@
 
           <button type="submit">Enviar Mensagem</button>
         </form>
-        <div class="footer">
-          <p>Atendimento de segunda a sexta, das 08h às 18h.</p>
-        </div>
-      </div>
+
+        <p class="info-atendimento">
+          Atendimento de segunda a sexta, das 08h às 18h.
+        </p>
+      </section>
     </main>
+
+    <!-- ================= SCRIPTS ================= -->
+    <script src="/assets/js/menu/scrptMenu.js"></script>
   </body>
-  <script src="assets/js/menu/scrptMenu.js"></script>
 </html>
